--- a/public/settings.html
+++ b/public/settings.html
@@ -174,7 +174,7 @@
     <section class="settings-panel">
       <div class="settings-title">SECURITY</div>
 
-      <label><input type="checkbox" id="anti-close-toggle" /> ENABLE ANTI-CLOSE</label>
+      <label><input type="checkbox" id="anti-close-toggle" />SECURLY + BLOCKSI BLOCKER (ANTI-CLOSE)</label>
 
       <button class="settings-btn" id="blank-launch">LAUNCH IN ABOUT:BLANK</button>
     </section>
