--- a/public/games.html
+++ b/public/games.html
@@ -74,7 +74,7 @@
 
         <a
           class="game-card"
-          href="player.html?game=games/fnaf/1.html"
+          href="player.html?game=games/FNAF/1.html"
           data-name="fnaf"
         >
           <div class="game-thumb">
@@ -85,7 +85,7 @@
 
         <a
           class="game-card"
-          href="player.html?game=games/fnaf/2.html"
+          href="player.html?game=games/FNAF/2.html"
           data-name="fnaf2"
         >
           <div class="game-thumb">
@@ -96,7 +96,7 @@
 
         <a
           class="game-card"
-          href="player.html?game=games/fnaf/3.html"
+          href="player.html?game=games/FNAF/3.html"
           data-name="fnaf3"
         >
           <div class="game-thumb">
@@ -107,7 +107,7 @@
 
         <a
           class="game-card"
-          href="player.html?game=games/fnaf/4.html"
+          href="player.html?game=games/FNAF/4.html"
           data-name="fnaf4"
         >
           <div class="game-thumb">
@@ -129,7 +129,7 @@
 
         <a
           class="game-card"
-          href="player.html?game=games/clash.html"
+          href="player.html?game=games/clash-royal.html"
           data-name="clash of vikings"
         >
           <div class="game-thumb">
@@ -696,17 +696,6 @@
           <div class="game-thumb">
             <img src="thumbs/sonicrush.jpeg" alt="sonicrush" />
             <div class="game-overlay">Sonic Rush</div>
-          </div>
-        </a>
-
-        <a
-          class="game-card"
-          href="player.html?game=games/sonic/sonica.html"
-          data-name="sonic-ashuro"
-        >
-          <div class="game-thumb">
-            <img src="thumbs/sonica.jpeg" alt="sonica" />
-            <div class="game-overlay">Sonic &amp; Ashuro</div>
           </div>
         </a>
 
