--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,72 @@
         <span class="pill-name">Level Devil</span>
       </a>
 
+      <a class="popular-pill" href="player.html?game=games/deadlydescent/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/deadlydescent.jpeg')"></span>
+        <span class="pill-name">Deadly Descentspan>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/stunt-bike-extreme/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/stunt-bike-extreme.png')"></span>
+        <span class="pill-name">Stunt Bike Extreme</span>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/gladdihoppers/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/gladdihoppers.png')"></span>
+        <span class="pill-name">Gladihoppers</span>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/snow-rider/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/snow-rider.jpeg')"></span>
+        <span class="pill-name">Snow Rider 3D</span>
+      </a>
+
+
+      <a class="popular-pill" href="player.html?game=games/drift-boss/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/drift-boss.jpeg')"></span>
+        <span class="pill-name">Drift Boss</span>
+      </a>
+
+       <a class="popular-pill" href="player.html?game=games/retrobowl/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/retrobowl.png')"></span>
+        <span class="pill-name">Retro Bowl</span>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/balatro/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/balatro.jpeg')"></span>
+        <span class="pill-name">Balatro</span>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/geometrydash/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/geometrydash.png')"></span>
+        <span class="pill-name">Geometry Dash</span>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/monkey-mart/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/monkey-mart.jpeg')"></span>
+        <span class="pill-name">Monkey Mart</span>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/level-devil/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/leveldevil.jpeg')"></span>
+        <span class="pill-name">Level Devil</span>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/deadlydescent/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/deadlydescent.jpeg')"></span>
+        <span class="pill-name">Deadly Descentspan>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/stunt-bike-extreme/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/stunt-bike-extreme.png')"></span>
+        <span class="pill-name">Stunt Bike Extreme</span>
+      </a>
+
+      <a class="popular-pill" href="player.html?game=games/gladdihoppers/index.html">
+        <span class="pill-thumb" style="background-image:url('thumbs/gladdihoppers.png')"></span>
+        <span class="pill-name">Gladihoppers</span>
+      </a>
+
       <a class="popular-pill" href="player.html?game=games/snow-rider/index.html">
         <span class="pill-thumb" style="background-image:url('thumbs/snow-rider.jpeg')"></span>
         <span class="pill-name">Snow Rider 3D</span>
