--- a/public/about.html
+++ b/public/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>S0LACE</title>
+  <title>Pr0ject Washington</title>
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="index.css" />
   <script src="global-hub.js" defer></script>
@@ -11,7 +11,7 @@
 
 <body>
 <header class="site-header">
-  <div class="site-title">S0LACE</div>
+  <div class="site-title">Pr0ject Washington</div>
   <nav class="site-nav">
     <a href="index.html">Home</a>
     <a href="games.html">Games</a>
@@ -27,12 +27,12 @@
 
   <section class="home-panel">
     <p style="font-size:10px; line-height:1.7;">
-      <span style="color:var(--accent)">S0LACE</span> is a simple gaming website made for community, games, and movies.
+      <span style="color:var(--accent)">Pr0ject Washington</span> is a simple gaming website made for community, games, and movies.
 
       <br><br>
-We believe in privacy, simplicity, and respect for users. S0LACE collects only essential technical data required to keep the site functional — such as loading performance, anonymous usage statistics, and basic error reporting. No personal data, browsing history, or account information is ever sold or distributed. All analytics are used solely to improve site reliability and experience.
-Content available on S0LACE is for educational and entertainment purposes only. We encourage all users to follow local rules, school guidelines, and copyright regulations. By using this site, you agree to the Terms of Service and Privacy Policy, which outline our data practices, acceptable use, and intellectual property policies.
-S0LACE Does not take ownership of any games, shows, movies ect. If you represent the Copyright Owner of anything featured on S0LACE, please summit a DCMA Takedown Request at trinityunblockedgames@gmail.com
+We believe in privacy, simplicity, and respect for users. Pr0ject Washington collects only essential technical data required to keep the site functional — such as loading performance, anonymous usage statistics, and basic error reporting. No personal data, browsing history, or account information is ever sold or distributed. All analytics are used solely to improve site reliability and experience.
+Content available on Pr0ject Washington is for educational and entertainment purposes only. We encourage all users to follow local rules, school guidelines, and copyright regulations. By using this site, you agree to the Terms of Service and Privacy Policy, which outline our data practices, acceptable use, and intellectual property policies.
+Pr0ject Washington Does not take ownership of any games, shows, movies ect. If you represent the Copyright Owner of anything featured on Pr0ject Washington, please summit a DCMA Takedown Request at finnellm.2028@ops125.net
 
     </p>
   </section>
