Update title and site name in games.html

--- a/public/games.html
+++ b/public/games.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>S0LACE • Games</title>
+    <title>Pr0ject Washington • Games</title>
 
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
@@ -18,7 +18,7 @@
   <body class="games-page">
     <header class="site-header">
       <div class="site-title">
-        S0LACE
+        Pr0ject Washington
       </div>
       <nav class="site-nav">
         <a href="index.html">Home</a>
