Rename project from S0LACE to Pr0ject Washington

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>S0LACE</title>
+  <title>Pr0ject Washington</title>
 
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="index.css" />
@@ -127,12 +127,12 @@
 
 <!-- Bottom icons -->
 <div id="bottom-icons">
-  <img src="thumbs/trello.png" onclick="window.open('https://trello.com/b/GZg1EjXk/s0lace-tracking','_blank')" />
-  <img src="thumbs/github.png" onclick="window.open('https://github.com/granthhss0/S0LACE','_blank')" />
+  <img src="thumbs/trello.png" onclick="window.open('https://trello.com/b/GZg1EjXk/Pr0ject Washington-tracking','_blank')" />
+  <img src="thumbs/github.png" onclick="window.open('https://github.com/granthhss0/Pr0ject Washington','_blank')" />
 </div>
 
 <header class="site-header">
-  <div class="site-title">S0LACE</div>
+  <div class="site-title">Pr0ject Washington</div>
   <nav class="site-nav">
     <a href="index.html" class="active">Home</a>
     <a href="games.html">Games</a>
@@ -145,7 +145,7 @@
 
   <section class="home-center">
     <div class="home-logo-title">
-      <div class="home-logo-mark">S0LACE</div>
+      <div class="home-logo-mark">Pr0ject Washington</div>
       <div class="home-version">v1.0.5</div>
     </div>
 
@@ -308,7 +308,7 @@ const lines = [
   "rip trinity",
   "what do yall know about moonlight",
   "need to finish adding custom domains",
-  "s0lace discord???",
+  "Pr0ject Washington discord???",
   "it welcome to derry finale was peak",
   "bro how are 500 people using this stupid site",
   "coding is confuzzling",
@@ -336,9 +336,9 @@ import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/1
 
 const app = initializeApp({
   apiKey: "AIzaSyBbgy76ThxHaKlOhpiLQ6Nw4ekR1b9t3DA",
-  authDomain: "s0lace-web.firebaseapp.com",
-  databaseURL: "https://s0lace-web-default-rtdb.firebaseio.com",
-  projectId: "s0lace-web"
+  authDomain: "Pr0ject Washington-web.firebaseapp.com",
+  databaseURL: "https://Pr0ject Washington-web-default-rtdb.firebaseio.com",
+  projectId: "Pr0ject Washington-web"
 });
 
 const db = getDatabase(app);
@@ -369,8 +369,8 @@ async function updateCounters(inc=false){
   document.getElementById("vis-week").textContent = week + (inc?1:0);
 }
 
-if(!sessionStorage.getItem("s0lace-counted")){
-  sessionStorage.setItem("s0lace-counted","1");
+if(!sessionStorage.getItem("Pr0ject Washington-counted")){
+  sessionStorage.setItem("Pr0ject Washington-counted","1");
   updateCounters(true);
 }else updateCounters(false);
 </script>
