Update title and header for media page

--- a/public/media.html
+++ b/public/media.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>S0LACE • Media</title>
+    <title>Pr0ject Washington • Media</title>
 
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
@@ -17,7 +17,7 @@
 
   <body>
     <header class="site-header">
-      <div class="site-title">S0LACE</div>
+      <div class="site-title">Pr0ject Washington</div>
       <nav class="site-nav">
         <a href="index.html">Home</a>
         <a href="games.html">Games</a>
