--- a/public/mediaplayer.html
+++ b/public/mediaplayer.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>S0LACE • Media Player</title>
+    <title>Pr0ject Washington • Media Player</title>
 
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
@@ -50,7 +50,7 @@
 
   <body class="media-player-page">
     <header class="site-header">
-      <div class="site-title">S0LACE</div>
+      <div class="site-title">Pr0ject Washington</div>
       <nav class="site-nav">
         <a href="index.html">Home</a>
         <a href="games.html">Games</a>
