--- a/public/player.html
+++ b/public/player.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>S0LACE • Player</title>
+    <title>Pr0ject Washington • Player</title>
 
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
@@ -17,7 +17,7 @@
   <body>
     <header class="site-header">
       <div class="site-title">
-        S0LACE
+        Pr0ject Washington
       </div>
       <nav class="site-nav">
         <a href="index.html">Home</a>
